documantation/egressGW/egressgw.yaml
---
 # anable traffic to edition.cnn.
 apiVersion: networking.istio.io/v1alpha3
 kind: ServiceEntry
 metadata:
   name: cnn
 spec:
   hosts:
   - edition.cnn.com
   ports:
   - number: 80
     name: http-port
     protocol: HTTP
   - number: 443
     name: https
     protocol: HTTPS
   resolution: DNS

# enable EGW to handle editon.cnn.com traffic through EGW
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - edition.cnn.com  # * directs all to gw

---
#apiVersion: networking.istio.io/v1alpha3
#kind: DestinationRule
#metadata:
#  name: egressgateway-for-cnn
#spec:
#  host: istio-egressgateway.istio-system.svc.cluster.local
#  subsets:
#  - name: cnn
#
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-cnn-through-egress-gateway
spec:
  hosts:
  - edition.cnn.com
  gateways:
  - istio-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
#        subset: cnn
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - istio-egressgateway
      port: 80
    route:
    - destination:
        host: edition.cnn.com
        port:
          number: 80
      weight: 100
